tests/iperf/isilon_10G/tcp_0/incoming_results.txt
zephram-1# iperf -c 7.7.7.3 -t 60
------------------------------------------------------------
Client connecting to 7.7.7.3, TCP port 5001
TCP window size:   129 KByte (default)
------------------------------------------------------------
[  3] local 7.7.7.2 port 28760 connected with 7.7.7.3 port 5001
[ ID] Interval       Transfer     Bandwidth
[  3]  0.0-60.0 sec  65.5 GBytes  9.38 Gbits/sec
zephram-1#

zephram-1# bash cpu_usage.sh iperf         
^C
11.5 14.7 16.4 19.2 20.2 23.4 24.3 27.3 27.9 30.7 31.0 34.4 33.9 36.5 36.1 39.0 38.5 41.7 41.0 43.9 43.1 46.1 44.8 47.9 46.4 49.3 47.6 50.8 48.9 51.7 49.6 52.7 51.2 54.4 52.4 55.3 53.0 56.3 54.1 57.1 54.8 57.8 55.2 58.3 56.1 59.2 56.4 59.7 56.8 59.6 62.5 59.8 62.6 59.7 63.0 60.4 63.8 61.0 64.2 61.6 65.1 61.9 64.9 61.7 64.8 62.3 65.5 62.3 65.2 61.8 64.9 61.7 64.5 61.3 64.3 61.1 64.4 61.3 64.6 61.4 64.6 61.3 64.4 67.6 64.4 67.7 64.5 67.8 64.8 67.7 64.3 67.0 63.4 66.3 62.8 66.2 62.5 65.2 62.4 65.3 62.3 65.3 62.5 65.8 63.2 66.0 63.0 66.2 62.8 66.1 62.8 65.9
average: 54.767
zephram-1#

zephram-2# ./ipfwd 1 0.0                   
[ipfwd] starting
current:  6.360%, error:  6.4%, probability:  0.000%
current:  7.849%, error:  1.5%, probability:  0.000%
current:  8.221%, error:  0.4%, probability:  0.000%
current:  8.563%, error:  0.3%, probability:  0.000%
current:  9.875%, error:  1.3%, probability:  0.000%
current:  12.085%, error:  2.2%, probability:  0.000%
current:  13.116%, error:  1.0%, probability:  0.000%
current:  16.064%, error:  2.9%, probability:  0.000%
current:  17.780%, error:  1.7%, probability:  0.000%
current:  17.352%, error:  0.4%, probability:  0.000%
current:  17.963%, error:  0.6%, probability:  0.000%
current:  17.523%, error:  0.4%, probability:  0.000%
current:  17.120%, error:  0.4%, probability:  0.000%
^C
zephram-2# 

zephram-2# iperf -s
------------------------------------------------------------
Server listening on TCP port 5001
TCP window size:   128 KByte (default)
------------------------------------------------------------
[  4] local 7.7.7.3 port 5001 connected with 7.7.7.2 port 28760
[ ID] Interval       Transfer     Bandwidth
[  4]  0.0-60.0 sec  65.5 GBytes  9.38 Gbits/sec
^C                                                                                                                                    
zephram-2# 

zephram-2# bash cpu_usage.sh iperf
^C
10.0 12.0 12.7 14.9 15.6 18.2 18.8 20.9 21.1 22.9 22.6 25.0 25.0 27.5 27.0 29.2 28.6 30.2 29.4 32.0 31.3 33.7 32.0 34.2 33.2 35.3 34.0 35.9 35.0 37.1 36.1 38.3 36.4 38.8 37.6 39.5 38.2 40.5 38.6 40.6 38.9 41.5 40.3 42.4 40.7 43.0 41.1 43.4 41.4 43.4 45.8 44.1 46.4 44.0 46.3 44.5 46.3 44.4 46.6 44.6 46.8 44.7 46.9 44.9 46.8 44.5 46.6 44.1 46.2 44.0 46.1 44.1 46.2 44.2 46.5 44.2 45.9 43.8 46.4 43.7 45.9 43.4 45.6 43.7 45.8 44.0 46.1 43.9 46.4 44.0 46.2 44.0 45.8 43.1 45.3 43.1 45.9 43.6 45.3 43.3 45.4 47.4 45.3 47.6 45.4 47.8 45.2 47.1 44.5 46.5 44.2 46.4
average: 39.2214
zephram-2# 
